--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div class="Contenedor-Binicio">
       <button class="Button" id="BVer">Click aqui para continuar</button>
     </div>
-    <!-- <audio id="cancion" autoplay controls style="display: none">
+    <audio id="cancion" autoplay controls style="display: none">
       <source
         src="/X2Download.app - Taylor Swift - Lover (Official Music Video) (192 kbps).mp3"
         type="audio/mpeg"
       />
       Tu navegador no soporta la reproducción de audio.
-    </audio> -->
+    </audio>
 
     <div class="Con-Emergente">
       <div id="resultado" class="cua">
