--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="Con-Emergente">
       <div id="resultado" class="cua">
         <p id="res">
-          Hola, antes de iniciar, solo quiero recordarte que eres muy especial
-          para mi.
+          Morchi, quiero que sepas que eres muy especial para mi y estoy super
+          orgulloso de la persona que eres ❤️
         </p>
         <button id="BotonCerrar" class="Button">Continuar</button>
       </div>
