--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="Contenedor">
       <canvas id="Flor" class="Flor" height="500"></canvas>
       <div class="Texto">
-        <h2 id="Text">Te amo mi reina</h2>
+        <h2 id="Text">Te amo mi reina 😘💕</h2>
       </div>
     </main>
 
