--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           Morchi, quiero que sepas que eres muy especial para mi y estoy super
           orgulloso de la persona que eres ❤️
         </p>
+        <p>Con mucho cariño para ti</p>
         <button id="BotonCerrar" class="Button">Continuar</button>
       </div>
     </div>
